fix login page alignment

--- a/styles/login/Login.module.scss
+++ b/styles/login/Login.module.scss
@@ -127,7 +127,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding-bottom: 100px;
+        padding-bottom: 30px;
 
         @media (min-width: 430px){
             // padding: 30px 0 30px 30px;
@@ -137,6 +137,9 @@
         }
         @media (min-width: 800px){
             // padding: 100px 0 100px 100px;
+        }
+        @media (min-width: 992px){
+            padding-bottom: 100px;
         }
 
         .login_form {
